<resources>
    <string name="app_name">MyMusic</string>
    <string name="logo">Logo</string>
    <string name="album">Album</string>
    <string name="albumPath">Album %s</string>
    <string name="songs">Songs</string>
    <string name="folder">Folder</string>
    <string name="folderLocation">Folder %s</string>
    <string name="tab">tab</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="notification_channel_name">myMusic</string>
    <string name="notification_channel_description">for playing music</string>
    <string name="notification_title">MyMusic</string>
    <string name="notification_text">This is my music</string>
    <string name="back">back</string>
    <string name="time">00:00</string>
    <string name="totalTime">Loading..</string>
    <string name="folderF">folderF..</string>
    <string name="albumF">albumF..</string>
    <string name="songF">songF..</string>
    <string name="next">next</string>
    <string name="backword">backword</string>
    <string name="loop">loop</string>
    <string name="suf">suf</string>

</resources>